--- a/zuruflix/pelicula2.html
+++ b/zuruflix/pelicula2.html
@@ -11,10 +11,7 @@
         <h1>Luna de miel con mama</h1>
     </header>
     <div class="video-container">
-        <video controls width="100%">
-            <source src="static/pelis/Luna de miel con mama (2025).mkv" type="video/mp4">
-            Tu navegador no soporta el formato de video.
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=nuycykJUS-Y" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <a href="index.html">Volver al inicio</a>
     </div>
 </body>
