--- a/zuruflix/pelicula2.html
+++ b/zuruflix/pelicula2.html
@@ -11,7 +11,7 @@
         <h1>Luna de miel con mama</h1>
     </header>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nuycykJUS-Y?si=xWVrHdDIn1f2KkUr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://drive.google.com/file/d/1QNGLJuPma4BK-uZCUcWv1u2VfCbpPkmq/preview" width="640" height="480" allowfullscreen></iframe>
         <a href="index.html">Volver al inicio</a>
     </div>
 </body>
