--- a/zuruflix/pelicula3.html
+++ b/zuruflix/pelicula3.html
@@ -11,10 +11,7 @@
         <h1>Yo no soy esa</h1>
     </header>
     <div class="video-container">
-        <video controls width="100%">
-            <source src="static/pelis/Yo no soy esa (2024).mkv" type="video/mp4">
-            Tu navegador no soporta el formato de video.
-        </video>
+        <iframe src="https://drive.google.com/file/d/1UZVPRuY9uoyvkRgnOdr1JKViPgSZ-Ch5/preview" width="640" height="480" allowfullscreen></iframe>
         <a href="index.html">Volver al inicio</a>
     </div>
 </body>
