--- a/zuruflix/index.html
+++ b/zuruflix/index.html
@@ -12,9 +12,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Películas</a></li>
-            <li><a href="#">Series</a></li>
+            <li><button onclick="mostrarTodo()">Inicio</button></li>
+            <li><button onclick="filtrarContenido('pelicula')">Películas</button></li>
+            <li><button onclick="filtrarContenido('serie')">Series</button></li>
         </ul>
     </nav>
     <main>
