--- a/zuruflix/pelicula3.html
+++ b/zuruflix/pelicula3.html
@@ -12,7 +12,7 @@
     </header>
     <div class="video-container">
         <iframe src="https://drive.google.com/file/d/1mqVKCvvdfYrBCuFWL-goB90dMcfdqPVW/preview" width="640" height="480" allowfullscreen></iframe>
-        <a href="index.html">Volver al inicio</a>
+        <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
 </html>
