--- a/zuruflix/index.html
+++ b/zuruflix/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Plataforma de Streaming</title>
-    <link rel="stylesheet" href="static/css/styles.css">
+    <title>Iniciar Sesión - Mi Plataforma de Streaming</title>
+    <link rel="stylesheet" href="static/css/login.css">
 </head>
 <body>
     <header>
         <h1>Mi Plataforma de Streaming</h1>
     </header>
-    <nav>
-        <ul>
-            <li><button onclick="mostrarTodo()">Inicio</button></li>
-            <li><button onclick="filtrarContenido('pelicula')">Películas</button></li>
-            <li><button onclick="filtrarContenido('serie')">Series</button></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="gallery" id="gallery">
-            <!-- Las películas se cargarán aquí dinámicamente -->
-        </section>
+
+    <main class="login-container">
+        <form class="login-form" id="loginForm">
+            <h2>Iniciar Sesión</h2>
+            <div class="input-group">
+                <label for="username">Usuario</label>
+                <input type="text" id="username" placeholder="Ingresa tu usuario" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" placeholder="Ingresa tu contraseña" required>
+            </div>
+            <p id="errorMsg" class="error-msg"></p>
+            <button type="submit">Entrar</button>
+            <p class="register-text">¿No tienes cuenta? <a href="#">Regístrate</a></p>
+        </form>
     </main>
 
-    <script defer src="static/js/script.js"></script>
+    <script src="static/js/login.js"></script>
 </body>
 </html>
