--- a/zuruflix/pelicula2.html
+++ b/zuruflix/pelicula2.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Luna de miel con mama</h1>
+        <h1>Antes de tí (2016)</h1>
     </header>
     <div class="video-container">
-        <iframe src="https://drive.google.com/file/d/1QNGLJuPma4BK-uZCUcWv1u2VfCbpPkmq/preview" width="640" height="480" allowfullscreen></iframe>
-        <a href="index.html">Volver al inicio</a>
+        <iframe src="https://drive.google.com/file/d/1aiT91U7AIlwmxlETxd4NMgnnjxDW2Z1S/preview" width="640" height="480" allowfullscreen></iframe>
+        <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
 </html>
