--- a/zuruflix/pelicula8.html
+++ b/zuruflix/pelicula8.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Película 3</h1>
+        <h1>Jurassic World: El Renacer</h1>
     </header>
     <div class="video-container">
-        <video controls width="100%">
-            <source src="static/pelis/pelicula1.mp4" type="video/mp4">
-            Tu navegador no soporta el formato de video.
-        </video>
-        <a href="index.html">Volver al inicio</a>
+        <iframe src="https://drive.google.com/file/d/1xmBXGsoPi-bx4Fkh1V0Im1z9aKja4YFB/preview" width="640" height="480" allowfullscreen></iframe>
+        <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
 </html>
