--- a/zuruflix/pelicula9.html
+++ b/zuruflix/pelicula9.html
@@ -15,7 +15,7 @@
             <source src="static/pelis/pelicula1.mp4" type="video/mp4">
             Tu navegador no soporta el formato de video.
         </video>
-        <a href="index.html">Volver al inicio</a>
+        <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
 </html>
