--- a/zuruflix/pelicula10.html
+++ b/zuruflix/pelicula10.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Película 3</h1>
+        <h1>angeles del desierto</h1>
     </header>
     <div class="video-container">
-        <video controls width="100%">
-            <source src="static/pelis/pelicula1.mp4" type="video/mp4">
-            Tu navegador no soporta el formato de video.
-        </video>
+        <iframe src="https://drive.google.com/file/d/1FvVM7-lyKYbUVQzSzWeWXAvZBNRqO9BH/preview" width="640" height="480" allowfullscreen></iframe>
         <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
