--- a/zuruflix/pelicula9.html
+++ b/zuruflix/pelicula9.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Película 3</h1>
+        <h1>El instituto</h1>
     </header>
     <div class="video-container">
-        <video controls width="100%">
-            <source src="static/pelis/pelicula1.mp4" type="video/mp4">
-            Tu navegador no soporta el formato de video.
-        </video>
+        <h2>Capítulo 1</h2>
+        <iframe src="https://drive.google.com/file/d/1L_7Z3VCZqPSWt3GKEZLvXjJfV2sRmlBS/preview" width="640" height="480" allowfullscreen></iframe>
+        <h2>Capítulo 2</h2>
+        <iframe src="https://drive.google.com/file/d/1cEKsJoVVs2gUUdzopAYGogdgKOgKpgga/preview" width="640" height="480" allowfullscreen></iframe>
+        <h2>Capítulo 3</h2>
+        <iframe src="https://drive.google.com/file/d/13kAZYv7-wP06QcbbEe9YEZXiqHIk7Qrs/preview" width="640" height="480" allowfullscreen></iframe>
+        <h2>Capítulo 4</h2>
+        <iframe src="https://drive.google.com/file/d/1TAxgEoOer7o0AK0FKXf5rNGEvmol5ZRz/preview" width="640" height="480" allowfullscreen></iframe>
         <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
