--- a/zuruflix/pelicula10.html
+++ b/zuruflix/pelicula10.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ver Película</title>
+    <title>Angeles del desierto</title>
     <link rel="stylesheet" href="static/css/peliculas.css">
 </head>
 <body>
     <header>
-        <h1>angeles del desierto</h1>
+        <h1>Angeles del desierto</h1>
     </header>
     <div class="video-container">
         <iframe src="https://drive.google.com/file/d/1FvVM7-lyKYbUVQzSzWeWXAvZBNRqO9BH/preview" width="640" height="480" allowfullscreen></iframe>
