--- a/zuruflix/pelicula9.html
+++ b/zuruflix/pelicula9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ver Película</title>
+    <title>El instituto</title>
     <link rel="stylesheet" href="static/css/peliculas.css">
 </head>
 <body>
@@ -19,6 +19,8 @@
         <iframe src="https://drive.google.com/file/d/13kAZYv7-wP06QcbbEe9YEZXiqHIk7Qrs/preview" width="640" height="480" allowfullscreen></iframe>
         <h2>Capítulo 4</h2>
         <iframe src="https://drive.google.com/file/d/1TAxgEoOer7o0AK0FKXf5rNGEvmol5ZRz/preview" width="640" height="480" allowfullscreen></iframe>
+        <h2>Capítulo 5</h2>
+        <iframe src="https://drive.google.com/file/d/1k52ScKvcugTTf6KAP25G7j0fTep4RPpn/preview" width="640" height="480" allowfullscreen></iframe>
         <a href="cartelera.html">Volver al inicio</a>
     </div>
 </body>
