--- a/zuruflix/pelicula2.html
+++ b/zuruflix/pelicula2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luna de miel con mama</title>
+    <title>Antes de tí (2016)</title>
     <link rel="stylesheet" href="static/css/peliculas.css">
 </head>
 <body>
