--- a/zuruflix/pelicula7.html
+++ b/zuruflix/pelicula7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ver Película</title>
+    <title>28 años después</title>
     <link rel="stylesheet" href="static/css/peliculas.css">
 </head>
 <body>
